# AutoTree

./: README.md  pyproject.toml  requierements.txt
notebooks/: structure.ipynb
src/autotree/: logger.py  utils.py
