[tool.poetry]
name = "autotree"
version = "0.1.0"
description = ""
authors = ["Oğuzhan KIR <oguzhankir17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
